[package]
name = "idn45"
version = "1.0.0"
edition = "2021"
authors = ["decryptable"]
description = "Implementation of a modern cryptographic hash function."
license = "MIT"
repository = "https://github.com/decryptable/idn45"
homepage = "https://github.com/decryptable/idn45"
keywords = ["hash", "crypto"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# We need the `hex` crate to easily convert byte arrays to hexadecimal strings.
hex = "0.4"
# Add clap for powerful command-line argument parsing.
clap = { version = "4.5", features = ["derive"] }
# Add anyhow for ergonomic application-level error handling.
anyhow = "1.0"
